iRedMail-1.0-beta2:
    * Removed OpenDMARC integration due to internal bug which caused incorrect
      email rejection. Bug reported to upstream:
      https://github.com/trusteddomainproject/OpenDMARC/issues/50

    * Fixed issues:
        - Incorect SSL CA file path on FreeBSD.
        - Improper postrotate command for log files on Linux.

    * Updated packages:
        + netdata -> 1.17.1

iRedMail-1.0-beta1:
    * Supports new distribution release:
        + OpenBSD 6.5
        + Debian 10

    * Drop support for old distribution releases:
        - OpenBSD 6.4
        - Ubuntu 16.04, 18.10.

            NOTE: We have no plan to support non-LTS edition anymore, only the
            latest LTS edition will be supported.

    * Drop support for OpenBSD ldapd backend.
    * Improvements:
        + Dovecot:
            - Enable quota-status service. Postfix can query this service and
              reject email immediately if user's mailbox is over quota.
            - Enable tracking user loast login time by default for
              MySQL/MariaDB and OpenLDAP backends.
              Note: Dovecot doesn't support this with PostgreSQL yet.

        + netdata: Disable sending anonymous statistics to netdata cloud.

    * Fixed issues:
        - Improper order of restriction rules in Postfix
          `smtpd_sender_restrictions` setting.
        - Fail2ban jail config file doesn't correctly set sshd port number(s).
        - Loose Fail2ban filter rules (postfix/dovecot) to reduce negative bans.
        - [Linux] Not send kill signal to php-fpm daemon process to reopen log
          file after logrotation.
        - tools/create_mail_user_OpenLDAP.py:
            - Fix missing comma which causes incorrect value of
              ldap attribute 'enabledService'.
              Thanks Michael Chong.

    * Updated packages:
        + Roundcube webmail -> 1.3.10
        + iRedAdmin -> 0.9.8
        + iRedAPD -> 3.1
        + mlmmjadmin -> 2.1
        + netdata -> 1.17.0