@@ -93,6 +93,8 @@ if which python2 &>/dev/null; then
     shift_month="$(echo ${shift_date} | awk -F'-' '{print $2}')"
     shift_day="$(echo ${shift_date} | awk -F'-' '{print $3}')"
     export REMOVED_BACKUP_DIR="${BACKUP_ROOTDIR}/pgsql/${shift_year}/${shift_month}/${shift_day}"
+    export REMOVED_BACKUP_MONTH_DIR="${BACKUP_ROOTDIR}/pgsql/${shift_year}/${shift_month}"
+    export REMOVED_BACKUP_YEAR_DIR="${BACKUP_ROOTDIR}/pgsql/${shift_year}"
 fi
 
 # Log file
@@ -174,6 +176,10 @@ fi
 if [ X"${REMOVE_OLD_BACKUP}" == X'YES' -a -d ${REMOVED_BACKUP_DIR} ]; then
     echo -e "* Old backup found. Deleting: ${REMOVED_BACKUP_DIR}." >>${LOGFILE}
     rm -rf ${REMOVED_BACKUP_DIR} >> ${LOGFILE} 2>&1
+
+    # Try to remove empty directory.
+    rmdir ${REMOVED_BACKUP_MONTH_DIR} 2>/dev/null
+    rmdir ${REMOVED_BACKUP_YEAR_DIR} 2>/dev/null
 
     su - ${SYS_USER_PGSQL} -c "psql -d iredadmin" <<EOF
 INSERT INTO log (event, loglevel, msg, admin, ip, timestamp) VALUES
