@@ -3,6 +3,9 @@ iRedMail-1.0-beta2:
       email rejection. Bug reported to upstream:
       https://github.com/trusteddomainproject/OpenDMARC/issues/50
 
+    * Improvements:
+        + tools/backup_*.sh: Remove old empty backup directory.
+
     * Fixed issues:
         - Incorect SSL CA file path on FreeBSD.
         - Improper postrotate command for log files on Linux.
